Leaderboard bugfix + small improvements
- Found bug on the leaderboard with server fetching. For more information go to leaderboard.vue. After 4h of trying, I could not find solution a solution except removing server fetching.
- Improved pagination component, allowing user to specify page to load.
- Removed arrows from number inputs.
- Downgraded node version, as there seems to exist a bug with fetching on node 18.
- Improved docker-compose so it loads services in proper order.

--- a/frontend/assets/css/tailwind.css
+++ b/frontend/assets/css/tailwind.css
@@ -16,3 +16,13 @@
     }
 
 }
+ /* Utilities removes the arrows from number inputs */
+@layer utilities {
+    input[type='number']::-webkit-outer-spin-button,
+    input[type='number']::-webkit-inner-spin-button,
+    input[type='number'] {
+      -webkit-appearance: none;
+      margin: 0;
+      -moz-appearance: textfield !important;
+    }
+ }
